# TeleMed

./: .gitignore  .replit  NETWORK_FIX_EXPLAINED.md  README.md  SETUP.md  TROUBLESHOOTING.md  app.py  cv_module.py  pyproject.toml  replit.md  requirements.txt  whisper_module.py
attached_assets/: Pasted-Traceback-most-recent-call-last-File-C-Users-Shree-AppData-Local-Packages-PythonSoftwareFoun-1761909076386_1761909076390.txt
static/css/: style.css
static/js/: consultation.js
templates/: consultation.html  doctor.html  index.html  patient.html
